[package]
name = "Cards-Server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
futures = "0.3.30"
clap = {versio = "4.5.11", features = ["derive"]}
